--- a/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
@@ -127,7 +127,7 @@
                                                 </a>
                                                 <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = item.id })" 
                                                    class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Titulos">
+                                                            data-toggle="tooltip" data-placement="top" title="Títulos de Propiedad">
                                                    <i class="mdi mdi-home"></i></a>
                                                 <a href="#">
                                                     <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.id"
