--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
@@ -74,7 +74,7 @@
                                         <td>@item.StampNumber</td>
                                        
                                         <td class="text-center">
-                                            <a href="@Url.Action("ver", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                            <a href="@Url.Action("verVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
                                                 <button type="button"
                                                         class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
                                                         data-toggle="tooltip"
@@ -83,7 +83,7 @@
                                                     <i class="mdi mdi-eye"></i>
                                                 </button>
                                             </a>
-                                            <a href="@Url.Action("editar", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                            <a href="@Url.Action("editarVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
                                                 <button type="button"
                                                         class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                         data-toggle="tooltip" data-placement="top" title="Editar">
