--- a/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
@@ -1,5 +1,13 @@
 ﻿
 @{
+    ViewBag.Title = "verVehiculo";
+    Layout = "~/Areas/webmaster/Views/Shared/_Layout.cshtml";
+}
+
+<h2>verVehiculo</h2>
+
+
+@{
     ViewBag.Title = "editar";
     Page.Title = "Editar Titular - Brokolee Software";
 }
@@ -26,13 +34,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Vehículo</h4>
+                            <h4 class="page-title">Ver Vehículo</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Vehículos</li>
+                            <li class="breadcrumb-item active">Ver Vehículo</li>
                         </ul>
                     </div>
                 </div>
@@ -61,16 +69,7 @@
             }
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("ModificarVehiculo",
-                        "titulares", FormMethod.Post,
-                        new
-                        {
-                            id = "editresidentForm",
-                            @class = "",
-                            enctype = "multipart/form-data"
-                        }))
-                    {
-                        @Html.AntiForgeryToken()
+                  
                         <input type="hidden" value="@Model.vehiculo.IdVehiculo" name="IdVehiculo" />
                         <input type="hidden" value="@Model.vehiculo.IdTitulo" name="IdTitulo" />
                         <div class="card-body">
@@ -83,7 +82,7 @@
                                 <label for="example-brand-input" class="col-sm-3 col-form-label">Marca</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
-                                           type="text" data-toggle="tooltip"
+                                           type="text" data-toggle="tooltip" readonly
                                            value="@Model.vehiculo.Brand"
                                            name="brand"
                                            placeholder="Marca"
@@ -96,7 +95,7 @@
                                 <div class="col-sm-9">
                                     <input class="form-control"
                                            type="text"
-                                           value="@Model.vehiculo.Model"
+                                           value="@Model.vehiculo.Model" readonly
                                            name="model" data-toggle="tooltip"
                                            placeholder="Modelo"
                                            id="example-model-input">
@@ -108,7 +107,7 @@
                                 <div class="col-sm-9">
                                     <input class="form-control"
                                            type="text"
-                                           value="@Model.vehiculo.Color"
+                                           value="@Model.vehiculo.Color" readonly
                                            name="colour" data-toggle="tooltip"
                                            placeholder="Color"
                                            id="example-color-input">
@@ -118,7 +117,7 @@
                             <div class="form-group row">
                                 <label for="example-year-input" class="col-sm-3 col-form-label">Año</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" name="year"
+                                    <input class="form-control" name="year" readonly
                                            type="number" data-toggle="tooltip"
                                            value="@Model.vehiculo.Year"
                                            placeholder="Año"
@@ -130,7 +129,7 @@
                                 <label for="example-cartable-input" class="col-sm-3 col-form-label">Tablilla</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
-                                           type="number" data-toggle="tooltip"
+                                           type="number" data-toggle="tooltip" readonly
                                            value="@Model.vehiculo.ClapBoard"
                                            name="clapboard"
                                            placeholder="Tablilla"
@@ -143,16 +142,14 @@
                                 <div class="col-sm-9">
                                     <input class="form-control"
                                            type="text"
-                                           value="@Model.vehiculo.StampNumber"
+                                           value="@Model.vehiculo.StampNumber" readonly
                                            name="stamp_number" data-toggle="tooltip"
                                            placeholder="Número de sello"
                                            id="example-numbercar-input">
                                     @* <small class="form-text text-muted">Número de sello del vehículo</small>*@
                                 </div>
                             </div>
-                            <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                         </div>
-                    }
                 </div>
             </div>
         </div><!-- end row -->
@@ -167,6 +164,4 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
-
-
 
