Editar y ver Vehiculo

--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
@@ -101,7 +101,7 @@
                         @Html.AntiForgeryToken()
                     <div class="card-body">
                         <h5 class="d-inline-block">Vehículos autorizados</h5>
-                        <input type="hidden" value="@Model.IdTitulo" name="IdTitulo" />
+                        <input type="hidden" value="@Model.titulo.Id" name="IdTitulo" />
 
                       
                         <div class="form-divider"></div>
