--- a/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
@@ -129,7 +129,7 @@
                                 <label for="example-cartable-input" class="col-sm-3 col-form-label">Tablilla</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
-                                           type="number" data-toggle="tooltip" readonly
+                                           type="text" data-toggle="tooltip" readonly
                                            value="@Model.vehiculo.ClapBoard"
                                            name="clapboard"
                                            placeholder="Tablilla"
