--- a/WebApplication1/Areas/webmaster/Views/titulares/editarVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarVehiculo.cshtml
@@ -130,7 +130,7 @@
                                 <label for="example-cartable-input" class="col-sm-3 col-form-label">Tablilla</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
-                                           type="number" data-toggle="tooltip"
+                                           type="text" data-toggle="tooltip"
                                            value="@Model.vehiculo.ClapBoard"
                                            name="clapboard"
                                            placeholder="Tablilla"
