--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -188,7 +188,7 @@
                                 <div class="form-group row">
                                     <label for="example-date-input" class="col-sm-3 col-form-label">Desde</label>
                                     <div class="col-sm-9">
-                                        <input name="fecha2"
+                                        <input name="since"
                                                id="fecha2">
                                         <small class="form-text text-muted">Mes / día / año</small>
                                     </div>
@@ -196,7 +196,7 @@
                                 <div class="form-group row">
                                     <label for="example-date-input" class="col-sm-3 col-form-label">Hasta</label>
                                     <div class="col-sm-9">
-                                        <input name="fecha3"
+                                        <input name="until"
                                                id="fecha3">
                                         <small class="form-text text-muted">Mes / día / año</small>
                                     </div>
@@ -264,7 +264,7 @@
                                     <div class="col-sm-9">
                                         <div class="input-group mt-2">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="input-arch-contra" name="contra_script" />
+                                                <input type="file" class="custom-file-input" id="input-arch-contra" name="script_file" />
                                                 <label id="garras" class="custom-file-label" for="input-arch">Seleccionar archivo</label>
                                             </div>
                                         </div>
