--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
@@ -35,6 +35,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -44,10 +55,10 @@
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("agregarTitulo", "titulares", new { area = "webmaster", id = Model.IdUserTitular })" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
-                                            
-                                        Agregar nuevo
+
+                                    Agregar nuevo
                                 </a>
-                                 </div>
+                            </div>
                         </div>
                         <div class="table-responsive">
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
@@ -57,78 +68,59 @@
                                         <th class="f-b">Fecha de adquisición</th>
                                         <th class="f-b">Apartamento</th>
                                         <th class="f-b">¿Está arrendada?</th>
-                                        <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model.titulosList)
                                     {
-                                    <tr>
-                                        <td>@item.community.first_name</td>
-                                        <td>@item.acq_date.ToString("MM/dd/yyyy")</td>
-                                        <td>@item.apartment</td>
-                                        @if (item.is_leased)
-                                        {
-                                            <td>Si</td>
-                                        }
-                                        else
-                                        {
-                                            <td>No</td>
-                                        }
-
-                                        <td class="text-center">
-                                            @if (item.is_active == true)
+                                        <tr>
+                                            <td>@item.community.first_name</td>
+                                            <td>@item.acq_date.ToString("MM/dd/yyyy")</td>
+                                            <td>@item.apartment</td>
+                                            @if (item.is_leased)
                                             {
-                                                <button type="button" onclick="onDeactiveResident(this)" data-id="@item.Id"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm">
-                                                    Activo
-                                                </button>
+                                                <td>Si</td>
                                             }
                                             else
                                             {
-                                                <button type="button" onclick="onActiveResident(this)" data-id="@item.Id"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm">
-                                                    Inactivo
-                                                </button>
+                                                <td>No</td>
                                             }
-                                        </td>
-                                        <td class="text-center">
-                                            <a href="@Url.Action("verTitulo", "titulares", new { area = "webmaster", id = item.Id })">
-                                                <button type="button"
-                                                        class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top"
-                                                        title="Ver">
-                                                    <i class="mdi mdi-eye"></i>
-                                                </button>
-                                            </a>
-                                            <a href="@Url.Action("editarTitulo", "titulares", new { area = "webmaster", id = item.Id })">
-                                                <button type="button"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i>
-                                                </button>
-                                            </a>
-                                            <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", id = item.Id })"
-                                               class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                               data-toggle="tooltip" data-placement="top" title="Listado Vehículos">
-                                                <i class="mdi mdi-car"></i>
-                                            </a>
-                                            <a href="#">
-                                                <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.Id"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top"
-                                                        title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </a>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("verTitulo", "titulares", new { area = "webmaster", id = item.Id })">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="@Url.Action("editarTitulo", "titulares", new { area = "webmaster", id = item.Id })">
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Editar">
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", id = item.Id })"
+                                                   class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                   data-toggle="tooltip" data-placement="top" title="Listado Vehículos">
+                                                    <i class="mdi mdi-car"></i>
+                                                </a>
+                                                <a href="#">
+                                                    <button type="button" onclick="onDeleteTitulo(this)" data-id="@item.Id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
 
+                                            </td>
 
-                                        </td>
-
-                                    </tr>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
@@ -159,3 +151,34 @@
 
     </form>
 </div> <!-- Page content Wrapper -->
+<script>
+             function onDeleteTitulo(self) {
+            var id = $(self).data('id');
+            var formData = new FormData();
+            formData.append("delID", id);
+
+            var url = "@Url.Action("DeleteTitulo", "titulares", new { area = "webmaster" })";
+         var respuesta = confirm("estas seguro que deseas eliminar el título");
+                if (respuesta == true) {
+                    $.ajax({
+                        url: url,
+                        type: "post",
+                        data: formData,
+                        success: function (result) {
+                            $("#ck-body-loading-overlay").hide();
+                            if (result.result === "error") {
+                                console.log('couln\'t get roles');
+                            } else {
+                                location.reload();
+                            }
+                        },
+                        processData: false,
+                        contentType: false
+                    });
+
+                     } else {
+
+                    return false;
+                    }
+        }
+</script>
