--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
@@ -35,6 +35,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -77,45 +88,45 @@
                                 <tbody>
                                     @foreach (var item in Model.vehiculosList)
                                     {
-                                    <tr>
-                                        <td>@item.Brand</td>
-                                        <td>@item.Model</td>
-                                        <td>@item.Color</td>
-                                        <td>@item.Year</td>
-                                        <td>@item.ClapBoard</td>
-                                        <td>@item.StampNumber</td>
-                                       
-                                        <td class="text-center">
-                                            <a href="@Url.Action("verVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
-                                                <button type="button"
-                                                        class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top"
-                                                        title="Ver">
-                                                    <i class="mdi mdi-eye"></i>
-                                                </button>
-                                            </a>
-                                            <a href="@Url.Action("editarVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
-                                                <button type="button"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i>
-                                                </button>
-                                            </a>                                           
-                                            <a href="#">
-                                                <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.IdVehiculo"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top"
-                                                        title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </a>
+                                        <tr>
+                                            <td>@item.Brand</td>
+                                            <td>@item.Model</td>
+                                            <td>@item.Color</td>
+                                            <td>@item.Year</td>
+                                            <td>@item.ClapBoard</td>
+                                            <td>@item.StampNumber</td>
+
+                                            <td class="text-center">
+                                                <a href="@Url.Action("verVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="@Url.Action("editarVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Editar">
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="#">
+                                                    <button type="button" onclick="onDeleteVehiculo(this)" data-id="@item.IdVehiculo"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
 
 
-                                        </td>
+                                            </td>
 
-                                    </tr>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
@@ -146,3 +157,34 @@
 
     </form>
 </div> <!-- Page content Wrapper -->
+<script>
+     function onDeleteVehiculo(self) {
+            var id = $(self).data('id');
+            var formData = new FormData();
+            formData.append("delID", id);
+
+            var url = "@Url.Action("DeleteVehiculo", "titulares", new { area = "webmaster" })";
+ var respuesta = confirm("estas seguro que deseas eliminar el vehículo");
+                if (respuesta == true) {
+                    $.ajax({
+                        url: url,
+                        type: "post",
+                        data: formData,
+                        success: function (result) {
+                            $("#ck-body-loading-overlay").hide();
+                            if (result.result === "error") {
+                                console.log('couln\'t get roles');
+                            } else {
+                                location.reload();
+                            }
+                        },
+                        processData: false,
+                        contentType: false
+                    });
+
+                     } else {
+
+                    return false;
+                    }
+        }
+</script>
